--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Brey Laude
 url: http://www.bllaude.github.io
 resume_site: http://www.hifreud.com/Resume.io/
 github: https://github.com/bllaude/
-baseurl: "/blog"
+baseurl: ""
 description: 
 meta_description: 
 motto: 
